# origintracer

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.latest.md  README.md  __init__.py  __init__.rev.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
applications/celery/: README.md  burst_test.py  gunicorn.conf.py  load_test.py  manage.py  origintracer.yaml  requirements.txt  stacktracer.yaml
applications/celery/config/: asgi.py  celery.py  settings.py  urls.py
applications/celery/probes/: celery_probe.py  celery_types.py  db_probe.py  psycopg2_ebpf_probe.py  redis_probe.py
applications/celery/rules/: blocking_db_in_worker.py  celery_rules.py  celery_rules_rev.py
applications/celery/worker/: __init__.py  apps.py  celery.py  send_tasks.py  settings.py  tasks.py  urls.py  views.py
applications/django/: README.md  burst_test.py  burst_test_benchmarked.py  gunicorn.conf.py  load_test.py  manage.py  origintracer.yaml  requirements.txt  stacktracer.yaml
applications/django/config/: asgi.py  settings.py  urls.py
applications/django/django_tracer/: __init__.py  apps.py  models.py  urls.py  views.py
applications/django/probes/: db_probe.py
backend/: README.md  main.py  main_rev.py
config/: defaults.yaml  probes.yaml
context/: vars.py
core/: active_requests.py  causal.py  causal_rev.py  engine.py  event_schema.py  graph_normalizer.py  graph_serializer.py  kprobe_bridge.py  runtime_graph.py  semantic.py  stacktracer.proto  temporal.py
docs/: index.md
docs/api/: base_probe.md  causal.md  emitter.md  engine.md  event_schema.md  kprobe_bridge.md  origintracer.md  otel_bridge.md  runtime_graph.md  temporal.md  tracker.md  uploader.md
docs/architecture/: design.md
docs/backend/: overview.md  storage.md
docs/development/: tests.md
docs/getting-started/: installation.md
docs/otel/: overview.md
docs/probes/: django.md  overview.md
docs/react_ui/: overview.md
docs/repl/: overview.md
docs/rules/: asyncio_rules.md  builtin.md  django_rules.md  overview.md
docs/stylesheets/: extra.css  header.js
frontend/: .env  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
origintracer/: __init__.py
origintracer/config/: defaults.yaml
origintracer/context/: vars.py
origintracer/core/: active_requests.py  bpf_programs.py  causal.py  engine.py  event_schema.py  graph_compactor.py  graph_normalizer.py  graph_serializer.py  kprobe_bridge.py  local_server.py  origintracer.proto  otel_bridge.py  runtime_graph.py  semantic.py  stacktracer.proto  temporal.py
origintracer/probes/: asyncio_probe.py  django_probe.py  gunicorn_probe.py  kernel_probe.py  nginx.lua  nginx_probe.py  uvicorn_probe.py
origintracer/query/: parser.py
origintracer/repl/: demo.tape  repl.py  run_demo.sh
origintracer/rules/: asyncio_rules.py  django_rules.py  gunicorn_rules.py  nginx_rules.py  uvicorn_rules.py
origintracer/sdk/: base_probe.py  emitter.py  uploader.py
origintracer/storage/: base.py
origintracer/utils/: logging.py
probes/: asyncio_probe.py  asyncio_probe_lua.py  db_kprobe.py  django_probe.py  django_probe_rev.py  gunicorn_probes.py  gunicorn_probes_rev.py  kernel_probe.py  nginx_probe.py  nginx_probe_lua.py  nginx_probe_rev.py  psycopg2_probe.py  redis_probe.py  uvicorn_probe_rev.py
query/: parser.py
repl/: repl.py  repl_rev.py
rules/: asyncio_rules.py  db_rules.py  deployment_rules.py  registry.py  retry_rules.py
scripts/: benchmark_engine.py
sdk/: base_probe.py  emitter.py  uploader.py
stacktracer/: __init__.py
stacktracer/backend/: main.py  main_rev.py
stacktracer/config/: defaults.yaml  probes.yaml
stacktracer/context/: vars.py
stacktracer/core/: active_requests.py  causal.py  causal_rev.py  engine.py  event_schema.py  graph_compactor.py  graph_normalizer.py  graph_serializer.py  kprobe_bridge.py  local_server.py  monitoring_coordinator.py  otel_bridge.py  runtime_graph.py  semantic.py  stacktracer.proto  temporal.py
stacktracer/probes/: asyncio_probe.py  asyncio_probe_lua.py  asyncio_probe_rev.py  celery_probe.py  db_kprobe.py  django_probe.py  django_probe_rev.py  gunicorn_probe.py  gunicorn_probes.py  gunicorn_probes_rev.py  kernel_probe.py  nginx.lua  nginx_probe.py  nginx_probe_lua.py  nginx_probe_rev.py  psycopg2_probe.py  redis_probe.py  uvicorn_probe.py  uvicorn_probe_rev.py
stacktracer/query/: parser.py
stacktracer/repl/: repl.py  repl_rev.py
stacktracer/rules/: asyncio_rules.py  db_rules.py  deployment_rules.py  registry.py  retry_rules.py
stacktracer/sdk/: base_probe.py  emitter.py  uploader.py
stacktracer/storage/: base.py
stacktracer/tests/: test_backend.py  test_conf.py  test_core_causal.py  test_core_graph.py  test_core_tracker.py  test_event_schema.py  test_integration.py  test_query.py  test_storage.py  test_transport.py
storage/: base.py
tests/: conftest.py  test_backend.py  test_conf.py  test_core_causal.py  test_core_engine.py  test_core_graph.py  test_core_normalizer.py  test_core_tracker.py  test_event_schema.py  test_full_stack.py  test_integration.py  test_normalized_event.py  test_query.py  test_semantic.py  test_storage.py  test_transport.py
(+21 files in other folders)
