[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "stacktracer"
version         = "0.1.0"
description     = "Python runtime observability — probe-based, no instrumentation required"
readme          = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0.1",
    "msgpack>=1.0.7",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.9",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
# Finds the stacktracer package and all sub-packages automatically
where = ["."]
include = ["stacktracer*"]

[tool.setuptools.package-data]
stacktracer = ["config/*.yaml"]   # ship defaults.yaml inside the package

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]