[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origintracer"
version = "0.1.0"
description = "Python runtime observability — probe-based, no instrumentation required"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0.1",
    "msgpack>=1.0.7",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "django>=5.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "fastapi>=0.110.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "clickhouse_driver>=0.2.10"
]

[tool.setuptools.packages.find]
# Finds the origintracer package and all sub-packages automatically
where = ["."]
include = ["origintracer*"]

[tool.setuptools.package-data]
origintracer = ["config/*.yaml"]

# black config
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
exclude = '''
/(
    \.git
  | \.venv
  | env
  | env2
  | __pycache__
  | node_modules
)/
'''

# ruff config
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
]
ignore = [
    "E501",
    "F401",
    "F821"
]

# pytest config
[tool.pytest.ini_options]
testpaths = ["tests/"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
markers = [
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["origintracer"]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]